[gd_scene load_steps=12 format=3 uid="uid://c6did8we6pmkh"]

[ext_resource type="Script" uid="uid://bxc60f5u1pqg5" path="res://Boss 2/mini_boss_2.gd" id="1_7rmml"]
[ext_resource type="AudioStream" uid="uid://duges1gu2j4u" path="res://explosion-47163 (1).mp3" id="4_e87ew"]
[ext_resource type="AudioStream" uid="uid://bf0gf044csf47" path="res://explosion-under-snow-sfx-230505.mp3" id="5_fs8v0"]
[ext_resource type="AudioStream" uid="uid://ijmhdn8scx62" path="res://small-explosion-103931.mp3" id="6_dgrjm"]
[ext_resource type="PackedScene" uid="uid://dlauv7e8lr1rw" path="res://Boss 2/boss_2_model.tscn" id="7_7rmml"]
[ext_resource type="AudioStream" uid="uid://6kp5lnep2lgs" path="res://engine-rise-31358.mp3" id="7_kwcjb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fykbi"]
size = Vector3(5.14926, 6.3981, 4.29996)

[sub_resource type="Animation" id="Animation_7rfje"]
resource_name = "Death"
length = 5.0
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.6, 0.8, 1.1, 1.5, 1.8, 2.2, 2.4, 2.7, 3.1, 3.4, 3.8, 4.2, 4.6, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [Vector3(2, 0, 0)],
"method": &"death_particles"
}, {
"args": [Vector3(0, 0, 4)],
"method": &"death_particles"
}, {
"args": [Vector3(0, 0, 1)],
"method": &"death_particles"
}, {
"args": [Vector3(2, 0, 2)],
"method": &"death_particles"
}, {
"args": [Vector3(3, 0, -3)],
"method": &"death_particles"
}, {
"args": [Vector3(0, 1, -3)],
"method": &"death_particles"
}, {
"args": [Vector3(1, 1.5, 0)],
"method": &"death_particles"
}, {
"args": [Vector3(0, 0, 1)],
"method": &"death_particles"
}, {
"args": [Vector3(2, 0, 2)],
"method": &"death_particles"
}, {
"args": [Vector3(3, 0, -3)],
"method": &"death_particles"
}, {
"args": [Vector3(0, 1, -3)],
"method": &"death_particles"
}, {
"args": [Vector3(1, 1.5, 0)],
"method": &"death_particles"
}, {
"args": [Vector3(2, 0, 2)],
"method": &"death_particles"
}, {
"args": [Vector3(2, 0, -4)],
"method": &"death_particles"
}, {
"args": [],
"method": &"create_overlay"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CSGCylinder3D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CSGCylinder3D2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CSGCylinder3D5:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CSGCylinder3D3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CSGCylinder3D6:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CSGCylinder3D4:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AudioStreamPlayer3:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.9, 1.7, 2.6, 3.8, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, true, true, true, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AudioStreamPlayer4:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_final_boom"
}]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Boss2Model/AnimationPlayer:speed_scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 2.68, 4.36),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.4, 0.9, 0.1]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Boss2Model/AnimationPlayer:current_animation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Armature|Walk"]
}

[sub_resource type="Animation" id="Animation_txwt7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCylinder3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CSGCylinder3D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CSGCylinder3D5:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CSGCylinder3D3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CSGCylinder3D6:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CSGCylinder3D4:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioStreamPlayer3:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AudioStreamPlayer4:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Boss2Model/AnimationPlayer:speed_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.8]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Boss2Model/AnimationPlayer:current_animation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s0nb6"]
_data = {
&"Death": SubResource("Animation_7rfje"),
&"RESET": SubResource("Animation_txwt7")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t23hs"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.215686)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 7.05

[node name="MiniBoss2" type="CharacterBody3D" groups=["enemy"]]
transform = Transform3D(-4.70599e-06, 0, 1.3, 0, 1.3, 0, -1.3, 0, -4.70599e-06, 0, 0, 0)
script = ExtResource("1_7rmml")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0252533, 1.37978, 0.293441)
shape = SubResource("BoxShape3D_fykbi")

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s0nb6")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_e87ew")
volume_db = 3.0
bus = &"SFX"

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0.769231, 0, 1.35525e-20, 0, -3.36241e-08, 0.769231, 0, -0.769231, -3.36241e-08, 0, 8.13362, 0)
spot_range = 21.6233
spot_angle = 53.7879

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fs8v0")
volume_db = -6.0
bus = &"SFX"

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(2.71736e-06, 0.757544, -0.133576, 0, -0.133576, -0.757544, -0.769231, 2.67608e-06, -4.71865e-07, -29.2895, 4.8452, 1.02945)
visible = false
radius = 3.0
height = 80.0
sides = 3
cone = true
material = SubResource("StandardMaterial3D_t23hs")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="."]
transform = Transform3D(-2.78461e-06, -0.757544, 0.133576, 0, -0.133576, -0.757544, 0.769231, -2.7423e-06, 4.83542e-07, 27.6162, 4.74, -1.56133)
visible = false
radius = 3.0
height = 80.0
sides = 3
cone = true
material = SubResource("StandardMaterial3D_t23hs")

[node name="CSGCylinder3D5" type="CSGCylinder3D" parent="."]
transform = Transform3D(-2.78461e-06, 6.72483e-08, 0.769231, 0, -0.769231, 6.72483e-08, 0.769231, 2.43438e-13, 2.78461e-06, -1.25708, 30.3466, -1.70524)
visible = false
radius = 3.0
height = 80.0
sides = 3
cone = true
material = SubResource("StandardMaterial3D_t23hs")

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="."]
transform = Transform3D(-0.769231, 2.44066e-06, -1.40912e-06, 0, -0.384615, -0.666173, -2.81823e-06, -0.666173, 0.384615, -1.70168, 15.2536, 26.3349)
visible = false
radius = 3.0
height = 80.0
sides = 3
cone = true
material = SubResource("StandardMaterial3D_t23hs")

[node name="CSGCylinder3D6" type="CSGCylinder3D" parent="."]
transform = Transform3D(0.769231, -2.50791e-06, 1.40912e-06, -3.36241e-08, -0.384615, -0.666173, 2.87647e-06, 0.666173, -0.384615, 1.9203, 15.2536, -27.1014)
visible = false
radius = 3.0
height = 80.0
sides = 3
cone = true
material = SubResource("StandardMaterial3D_t23hs")

[node name="CSGCylinder3D4" type="CSGCylinder3D" parent="."]
transform = Transform3D(-0.543926, 0.471057, -0.271965, -3.36241e-08, -0.384615, -0.666173, -0.54393, -0.471054, 0.271963, -16.0095, 14.6726, 17.0978)
visible = false
radius = 3.0
height = 80.0
sides = 3
cone = true
material = SubResource("StandardMaterial3D_t23hs")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_dgrjm")
pitch_scale = 0.7
bus = &"SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kwcjb")
volume_db = 3.0
bus = &"SFX"

[node name="Boss2Model" parent="." instance=ExtResource("7_7rmml")]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, -3.94799, 0)

[node name="Skeleton3D" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5" index="0"]
bones/5/rotation = Quaternion(-0.576762, -0.00201889, -0.0947229, 0.8114)
bones/7/rotation = Quaternion(-0.976182, 0.00685204, -0.207679, 0.0623808)
bones/62/rotation = Quaternion(-0.000385918, 8.17492e-15, -0.000401128, 1)
bones/66/rotation = Quaternion(-0.000385918, -8.17492e-15, 0.000401128, 1)
bones/74/rotation = Quaternion(-0.694596, 0.719015, -0.0177643, 0.01544)
bones/76/rotation = Quaternion(-0.648421, 0.0010233, 0.105299, 0.753963)
bones/77/rotation = Quaternion(-0.655328, -0.010823, 0.0935351, 0.749453)
bones/78/rotation = Quaternion(-0.317452, -0.0534508, 0.0638832, 0.944609)
bones/102/rotation = Quaternion(-0.524655, 0.00787792, 0.101279, 0.845232)
bones/106/rotation = Quaternion(-0.672304, -0.00415352, 0.108893, 0.73221)
bones/112/rotation = Quaternion(0.0151446, 0.940791, 0.338422, -0.0124204)

[node name="Plane_009_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="0"]
transform = Transform3D(0.999808, 0.0101072, 0.0167934, -0.0195485, 0.57642, 0.816919, -0.00142334, -0.817091, 0.576507, -0.0235364, -4.06783, 1.12708)

[node name="Plane_012_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="1"]
transform = Transform3D(0.999541, 0.0154783, 0.026032, -0.0302251, 0.564288, 0.825025, -0.00191961, -0.825433, 0.564496, -0.0360494, -4.04568, 1.14594)

[node name="Cube_016_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="2"]
transform = Transform3D(1, -6.16536e-07, 2.10106e-06, 6.91041e-07, 1, 5.96046e-08, -2.17557e-06, -1.19209e-07, 1, 2.14577e-06, -3.87371, -0.0506229)

[node name="Plane_004_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="3"]
transform = Transform3D(0.999998, 0.00125615, -0.000689775, -0.0004289, 0.721604, 0.692306, 0.00136743, -0.692305, 0.721604, -0.00117278, -4.36874, 0.212452)

[node name="Cube_013_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="4"]
transform = Transform3D(0.999998, -0.00144771, -0.00115839, 0.00180166, 0.906349, 0.422525, 0.000438169, -0.422527, 0.90635, 0.000154257, -4.06136, -0.102504)

[node name="Plane_011_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="5"]
transform = Transform3D(0.99998, -0.00296631, -0.00558428, 0.00615808, 0.65738, 0.753534, 0.00143573, -0.753553, 0.657385, 0.0181971, -5.2386, 1.13138)

[node name="Plane_002_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="6"]
transform = Transform3D(0.9999, 0.00264424, -0.0139172, 0.00871175, 0.65992, 0.751285, 0.0111708, -0.751331, 0.659831, 0.0220287, -4.49094, 0.822926)

[node name="Plane_013_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="7"]
transform = Transform3D(0.9999, 0.00264424, -0.0139172, 0.00871175, 0.65992, 0.751285, 0.0111708, -0.751331, 0.659831, 0.0220287, -4.49094, 0.822926)

[node name="Cube_007_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="8"]
transform = Transform3D(0.999999, -0.00138447, -0.000585906, 0.0015032, 0.927259, 0.374417, 2.48924e-05, -0.374418, 0.92726, -0.000631094, -3.99765, -0.138904)

[node name="Plane_015_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="9"]
transform = Transform3D(0.999996, -0.00121603, -0.00252835, 0.00234824, 0.855941, 0.517068, 0.00153532, -0.517072, 0.855941, 0.00350237, -4.25948, 0.118023)

[node name="Cube_010_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="10"]
transform = Transform3D(0.999997, -0.000629164, 0.00229289, -0.000306861, 0.92213, 0.38688, -0.0023578, -0.38688, 0.922127, -0.0152256, -3.62556, -0.0459127)

[node name="Cube_012_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="11"]
transform = Transform3D(0.999994, -0.000783871, 0.00344764, -0.000648563, 0.917894, 0.396826, -0.00347566, -0.396826, 0.917887, -0.0215552, -3.67767, -0.0142303)

[node name="Cylinder_002_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="12"]
transform = Transform3D(1, -1.77636e-15, -5.87747e-39, -1.77636e-15, 1, -4.37113e-08, 5.87747e-39, 4.37113e-08, 1, 0, -1.18996, -0.886135)

[node name="Cube_006_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="13"]
transform = Transform3D(1, 0.000424944, 0.000183292, -0.000158529, 0.686637, -0.727001, -0.00043479, 0.727, 0.686637, -0.00110579, 6.22073, 4.21201)

[node name="Cube_017_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="14"]
transform = Transform3D(1, -0.00042496, -0.000183293, 0.000158539, 0.686637, -0.727001, 0.000434802, 0.727, 0.686637, 0.00110495, 6.22073, 4.212)

[node name="Cube_005_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="15"]
transform = Transform3D(1, -1.42109e-13, -3.41061e-13, 2.27374e-13, 1, -8.9407e-07, 3.97904e-13, 8.9407e-07, 1, -4.00176e-11, -1.18995, -0.886128)

[node name="Cube_005_Inside_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="16"]
transform = Transform3D(1, -1.42109e-13, -3.41061e-13, 2.27374e-13, 1, -8.9407e-07, 3.97904e-13, 8.9407e-07, 1, -4.00176e-11, -1.18995, -0.886128)

[node name="Plane_003_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="17"]
transform = Transform3D(1, 1.08798e-10, -1.02383e-08, -1.10163e-10, 1, -2.82831e-07, 1.02508e-08, 2.82773e-07, 1, 1.90735e-06, -1.18996, -0.886138)

[node name="Plane_016_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="18"]
transform = Transform3D(1, -1.08798e-10, 1.02383e-08, 1.10163e-10, 1, -2.82831e-07, -1.02508e-08, 2.82773e-07, 1, -1.90735e-06, -1.18996, -0.886138)

[node name="Cube_008_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="19"]
transform = Transform3D(1, -1.32349e-23, -5.87747e-39, 1.32349e-23, 1, 0, 5.87747e-39, 0, 1, -1.96763e-16, -1.18996, -0.88614)

[node name="Cube_008_Inside_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="20"]
transform = Transform3D(1, -1.32349e-23, -5.87747e-39, 1.32349e-23, 1, 0, 5.87747e-39, 0, 1, -1.96763e-16, -1.18996, -0.88614)

[node name="Plane_006_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="21"]
transform = Transform3D(0.999842, 0.00575146, -0.016818, -0.0164877, -0.0533267, -0.998441, -0.00663939, 0.998561, -0.0532233, 0.00782704, 4.88466, 0.372323)

[node name="Plane_008_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="22"]
transform = Transform3D(0.999628, 0.00876224, -0.0258262, -0.0254856, -0.0369799, -0.998991, -0.00970848, 0.999278, -0.0367427, 0.0118895, 4.85461, 0.353625)

[node name="Cube_004_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="23"]
transform = Transform3D(1, -2.83122e-07, -3.54648e-06, -5.25266e-07, 0.975041, -0.222028, 3.50177e-06, 0.222028, 0.975041, 6.67572e-06, 3.26208, 0.308298)

[node name="Plane_005_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="24"]
transform = Transform3D(0.9999, 0.0121027, -0.0071404, -0.0039739, -0.243846, -0.969806, -0.0134784, 0.969738, -0.243774, 0.00707603, 4.0079, 1.68626)

[node name="Cube_003_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="25"]
transform = Transform3D(0.999976, 0.00661536, -0.00223497, -0.00634035, 0.726126, -0.687532, -0.00292546, 0.68753, 0.726151, 0.00214815, 3.37035, 0.490263)

[node name="Plane_007_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="26"]
transform = Transform3D(0.999881, 0.0120405, 0.00963214, -0.011656, 0.99917, -0.0390271, -0.0100941, 0.0389101, 0.999192, -0.0568025, 0.217079, -0.572297)

[node name="Plane_014_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="27"]
transform = Transform3D(0.999954, 0.00571696, -0.0076784, -0.00956167, 0.635339, -0.772174, 0.000463821, 0.772212, 0.635364, 0.0152717, 3.66798, 0.623305)

[node name="Plane_010_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="28"]
transform = Transform3D(0.999912, 0.00440726, -0.0125464, -0.0124734, 0.637915, -0.770006, 0.00460988, 0.770094, 0.637913, 0.0271151, 3.65298, 0.631222)

[node name="Cube_014_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="29"]
transform = Transform3D(0.999976, 0.00676121, -0.00162505, -0.00615507, 0.751868, -0.659285, -0.00323579, 0.659279, 0.751892, 0.00128913, 3.32599, 0.46382)

[node name="Plane_001_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="30"]
transform = Transform3D(0.999973, 0.00645205, -0.0035597, -0.00696723, 0.670525, -0.741855, -0.00239967, 0.741859, 0.670552, 0.00574017, 3.56429, 0.583189)

[node name="Cube_015_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="31"]
transform = Transform3D(0.999974, 0.00714543, 0.00144164, -0.00450686, 0.761486, -0.648165, -0.00572929, 0.648142, 0.761498, -0.0152593, 3.20215, 0.101529)

[node name="Cube_001_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="32"]
transform = Transform3D(0.999975, 0.00688755, 0.00145158, -0.00413196, 0.741342, -0.671114, -0.00569853, 0.671092, 0.741353, -0.0151894, 3.33999, 0.202661)

[node name="Cylinder_001_Material_0" parent="Boss2Model/Sketchfab_model/bed584e06fe94e71a7ac484cee9f0a16_fbx/Object_2/RootNode/Armature/Object_5/Skeleton3D" index="33"]
transform = Transform3D(1, 1.77636e-15, -5.87747e-39, 1.77636e-15, 1, -4.37113e-08, 5.87747e-39, 4.37113e-08, 1, 0, -1.18996, -0.886135)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Boss2Model"]
